# fwdt

./: CHANGLOG.md  Cargo.toml  NOTES.MD  README.md  docs.txt  fwdt-0.1.0-2.x86_64.rpm
.github/workflows/: release.yml
src/: main.rs
src/module/: template_derived.rs
test/data/: body_weight.csv  power_lift.csv  radio_log_small.csv  radio_log_small_ditto.csv  radio_log_small_na.csv
test/data/body_weight/: data.txt
test/data/ham_log/: data.txt  template.toml
test/data/no_toml/: template.toml
test/data/power_lift/: data.txt
