[package]
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
categories = ["command-line-utilities"]
description = "Very High Scorch. The fastest way to do data entry with templates. Scorch is the ratio of characters out over characters entered"
license = "Unlicense/MIT"
readme = "README.md"
repository = "https://github.com/alexhallam/fwdt"
name = "fwdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
toml = "0.5.9"
csv = "1.1.6"
structopt = "0.3.26"