[package]
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
categories = ["command-line-utilities"]
description = "Few Word Do Trick (fwdt) is a fast data logger Very High Scorch. The fastest and least error prone way to do data entry."
license = "Unlicense/MIT"
readme = "README.md"
repository = "https://github.com/alexhallam/fwdt"
name = "fwdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
csv = "1.1.6"
structopt = "0.3.26"